--- a/app/src/main/res/layout/activity_object.xml
+++ b/app/src/main/res/layout/activity_object.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_show_hive"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ObjectActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".ShowHiveActivity"
+    tools:openDrawer="start">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,74 +19,91 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/show_hive_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/design_default_color_primary"
+                android:elevation="4dp"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayoutObject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabTextColor="@color/white"
-                android:background="@color/purple_200" />
+                android:background="@color/purple_200"
+                app:tabTextColor="@color/white" />
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPagerObject"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/fab_object"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/fab_object"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Akce"
+            android:layout_marginBottom="16dp"
             android:gravity="end"
-            app:icon="@drawable/ic_add"/>
+            android:text="Akce"
+            app:icon="@drawable/ic_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_object_add_record"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/fab_object"
-            app:layout_constraintEnd_toEndOf="@id/fab_object"
             android:layout_marginBottom="24dp"
             android:src="@drawable/ic_add"
-            app:fabSize="normal"/>
+            app:fabSize="normal"
+            app:layout_constraintBottom_toTopOf="@id/fab_object"
+            app:layout_constraintEnd_toEndOf="@id/fab_object" />
 
         <TextView
+            android:id="@+id/fab_object_add_record_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/fab_object_add_record_text"
-            android:text="Přidat záznam návštěvy"
             android:layout_marginEnd="8dp"
+            android:text="Přidat záznam návštěvy"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="@id/fab_object_add_record"
             app:layout_constraintEnd_toStartOf="@+id/fab_object_add_record"
-            app:layout_constraintTop_toTopOf="@+id/fab_object_add_record"
-            android:textColor="@android:color/black"/>
+            app:layout_constraintTop_toTopOf="@+id/fab_object_add_record" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_object_add_harvest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/fab_object_add_record"
-            app:layout_constraintEnd_toEndOf="@id/fab_object_add_record"
             android:layout_marginBottom="24dp"
             android:src="@drawable/ic_add"
-            app:fabSize="normal"/>
+            app:fabSize="normal"
+            app:layout_constraintBottom_toTopOf="@id/fab_object_add_record"
+            app:layout_constraintEnd_toEndOf="@id/fab_object_add_record" />
 
         <TextView
+            android:id="@+id/fab_object_add_harvest_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/fab_object_add_harvest_text"
-            android:text="Medobraní"
             android:layout_marginEnd="8dp"
+            android:text="Medobraní"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="@id/fab_object_add_harvest"
             app:layout_constraintEnd_toStartOf="@+id/fab_object_add_harvest"
-            app:layout_constraintTop_toTopOf="@+id/fab_object_add_harvest"
-            android:textColor="@android:color/black"/>
+            app:layout_constraintTop_toTopOf="@+id/fab_object_add_harvest" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view_show_hive"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_menu" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
