--- a/app/src/main/res/layout/fragment_stats_alert.xml
+++ b/app/src/main/res/layout/fragment_stats_alert.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -116,7 +116,8 @@
             android:layout_marginTop="16dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stats_alert_medium_text" />
+            app:layout_constraintTop_toBottomOf="@+id/stats_alert_medium_text"
+            app:layout_constraintBottom_toTopOf="@id/stats_alert_line"/>
 
         <TextView
             android:id="@+id/stats_alert_low"
@@ -130,6 +131,36 @@
             app:layout_constraintTop_toTopOf="@id/stats_alert_low_text"
             app:layout_constraintBottom_toBottomOf="@id/stats_alert_low_text"/>
 
+        <View
+            android:id="@+id/stats_alert_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/stats_alert_low_text"
+            app:layout_constraintBottom_toTopOf="@id/stats_alert_alerts_text"/>
+
+        <TextView
+            android:id="@+id/stats_alert_alerts_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Výpis všech upozornění"
+            android:textSize="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/stats_alert_line"
+            app:layout_constraintBottom_toTopOf="@id/stats_alert_expandable_list_view"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <ExpandableListView
+            android:id="@+id/stats_alert_expandable_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginTop="4dp"
+            android:nestedScrollingEnabled="true"
+            app:layout_constraintTop_toBottomOf="@id/stats_alert_alerts_text"
+            app:layout_constraintStart_toStartOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
