--- a/app/src/main/res/layout/fragment_stats_alert_hive.xml
+++ b/app/src/main/res/layout/fragment_stats_alert_hive.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -155,11 +155,13 @@
         <ExpandableListView
             android:id="@+id/stats_alert_hive_expandable_list_view"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
+            android:nestedScrollingEnabled="true"
+            android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@id/stats_alert_hive_alerts_text"
             app:layout_constraintStart_toStartOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
