--- a/app/src/main/res/layout/fragment_stats_record.xml
+++ b/app/src/main/res/layout/fragment_stats_record.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -70,23 +70,19 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/stats_record_unique_text"
-            app:layout_constraintBottom_toTopOf="@id/stats_record_frame_layout"/>
+            app:layout_constraintBottom_toTopOf="@id/stats_record_list_view"/>
 
-        <FrameLayout
-            android:id="@+id/stats_record_frame_layout"
+
+        <ListView
+            android:id="@+id/stats_record_list_view"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/stats_record_feeding_text">
+            android:visibility="visible"
+            android:layout_marginTop="4dp"
+            android:nestedScrollingEnabled="true"
+            app:layout_constraintTop_toBottomOf="@id/stats_record_feeding_text"/>
 
-            <ListView
-                android:id="@+id/stats_record_list_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible"/>
-
-        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
