--- a/app/src/main/res/layout/fragment_stats_record_hive.xml
+++ b/app/src/main/res/layout/fragment_stats_record_hive.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/stats_record_hive_graph_resources"
+            app:layout_constraintBottom_toTopOf="@+id/stats_record_hive_graph_resources_text"
             app:layout_constraintEnd_toStartOf="@id/stats_record_hive_total"/>
 
         <TextView
@@ -35,21 +35,47 @@
             app:layout_constraintTop_toTopOf="@id/stats_record_hive_total_text"
             app:layout_constraintBottom_toBottomOf="@id/stats_record_hive_total_text"/>
 
+        <TextView
+            android:id="@+id/stats_record_hive_graph_resources_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stav zásob"
+            android:textSize="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_total_text"
+            app:layout_constraintBottom_toTopOf="@id/stats_record_hive_graph_resources"/>
+
         <com.jjoe64.graphview.GraphView
             android:id="@+id/stats_record_hive_graph_resources"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_graph_resources_text"
+            app:layout_constraintBottom_toTopOf="@id/stats_record_hive_graph_integrity_text"/>
+
+        <TextView
+            android:id="@+id/stats_record_hive_graph_integrity_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mezerovitost plodu"
+            android:textSize="16dp"
+            android:textColor="@color/black"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_total_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_graph_resources"
             app:layout_constraintBottom_toTopOf="@id/stats_record_hive_graph_integrity"/>
+
 
         <com.jjoe64.graphview.GraphView
             android:id="@+id/stats_record_hive_graph_integrity"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_graph_resources"
-            app:layout_constraintBottom_toTopOf="@id/stats_record_hive_feeding_text"/>
+            android:layout_marginTop="4dp"
+            app:layout_constraintBottom_toTopOf="@id/stats_record_hive_feeding_text"
+            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_graph_integrity_text"
+            tools:layout_editor_absoluteX="16dp" />
 
         <TextView
             android:id="@+id/stats_record_hive_feeding_text"
@@ -60,23 +86,18 @@
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_graph_integrity"/>
+            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_graph_integrity"
+            app:layout_constraintBottom_toTopOf="@id/stats_record_list_view"/>
 
-        <FrameLayout
-            android:id="@+id/stats_record_frame_layout"
+        <ListView
+            android:id="@+id/stats_record_list_view"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_feeding_text">
-
-            <ListView
-                android:id="@+id/stats_record_list_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible"/>
-
-        </FrameLayout>
+            android:nestedScrollingEnabled="true"
+            android:visibility="visible"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@id/stats_record_hive_feeding_text"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
